[project]
name = "vps-vendor-scanner"
version = "0.1.0"
description = "GitHub Actions based VPS product scanner and stock monitor for WHMCS, HostBill, and custom APIs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "actions-vps-vendor-scanner"}]
license = {text = "MIT"}
dependencies = [
  "httpx[socks]>=0.28.1",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]
